--- a/hasjob/static/sass/_header.sass
+++ b/hasjob/static/sass/_header.sass
@@ -113,11 +113,14 @@ header
 
 .job-filters-select2
   line-height: 1.5em
-  width: 100%
 
 .header-section .select2-container
   display: block
   min-width: 100px
+
+.header-section .select2-container-multi .select2-choices .select2-search-choice
+  font-size: 12px
+  margin-right: 3px
 
 .header-section ::-webkit-input-placeholder
   color: #999
@@ -141,6 +144,7 @@ header
   .header-section .submit-btn
     font-size: 12px
     line-height: 2.1em
+    padding: 5px 0
 
   .header-section .pay-filter-dropdown 
     font-size: 12px
@@ -148,10 +152,6 @@ header
   .header-section .select2-container
     font-size: 12px
     line-height: 2.1em
-
-  .header-section .select2-container-multi .select2-choices .select2-search-choice
-    font-size: 12px
-    margin-right: 3px
 
   .select2-drop
     font-size: 12px
